--- a/Program/TimeAndTune/TimeAndTune/MainWindow.xaml
+++ b/Program/TimeAndTune/TimeAndTune/MainWindow.xaml
@@ -4,9 +4,12 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:TimeAndTune"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        mc:Ignorable="d" 
+        WindowState="Maximized"
+        Height="1080" Width="1920"
+        Background="black"
+        Title="MainWindow">
     <Grid>
-
+        <Frame Name="mainFrame" NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
