--- a/Program/TimeAndTune/TimeAndTune/Pages/StatisticsPage.xaml
+++ b/Program/TimeAndTune/TimeAndTune/Pages/StatisticsPage.xaml
@@ -5,11 +5,388 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:TimeAndTune"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="1080" d:DesignWidth="1920"
       Background="#25232A"
       Title="StatisticsPage">
 
     <Grid>
-        
+        <Grid.LayoutTransform>
+            <ScaleTransform ScaleX="0.75" ScaleY="0.75" />
+        </Grid.LayoutTransform>
+
+
+        <Button
+            Margin="90,53,0,0"
+            Width="90"
+            Height="90"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Background="Transparent"
+            BorderThickness="0">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsHitTestVisible" Value="False" />
+                </Style>
+            </Button.Style>
+            <Image Source="/Pages/menu_icon.png"
+                   Width="90"
+                   Height="90"/>
+        </Button>
+        <Rectangle
+            Fill="Transparent"
+            RadiusX="12"
+            RadiusY="12"
+            Margin="0,60,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Center"
+            Width="282"
+            Height="84"
+            Stroke="#984BBC" 
+            StrokeThickness="6"
+            />
+        <TextBlock
+            VerticalAlignment="Top"
+            HorizontalAlignment="Center"
+            Text="Statistics"
+            Margin="0,77,0,0"
+            Foreground="White"
+            FontSize="37"
+            />
+        <Button
+            Background="Transparent"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Right"
+            Height="100"
+            Width="100"
+            Margin="0,60,90,0"
+            BorderThickness="0">
+            <Button.Style>
+                <Style TargetType="Button">
+                    <Setter Property="IsHitTestVisible" Value="False" />
+                </Style>
+            </Button.Style>
+            <Image HorizontalAlignment="Right"
+               Height="100"
+               Width="100" 
+               Source="/Pages/user_image.png"
+            />
+        </Button>
+        <Rectangle 
+            Fill="#7A7373"
+            RadiusX="32"
+            RadiusY="32"
+            Margin="704,236,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="160"
+            Height="50"
+            />
+        <TextBlock 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Text="WEEK"
+            Margin="736,234,0,0"
+            Foreground="White"
+            FontSize="37"
+            />
+        <Rectangle 
+            Fill="#353535"
+            RadiusX="32"
+            RadiusY="32"
+            Margin="950,236,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="160"
+            Height="50"
+            />
+        <TextBlock 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Text="MONTH"
+            Margin="961,234,0,0"
+            Foreground="White"
+            FontSize="37"
+            />
+        <Rectangle 
+            Fill="#353535"
+            RadiusX="32"
+            RadiusY="32"
+            Margin="1189,236,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="160"
+            Height="50"
+            />
+        <TextBlock 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Text="YEAR"
+            Margin="1228,234,0,0"
+            Foreground="White"
+            FontSize="37" RenderTransformOrigin="0.5,0.5"
+            >
+        </TextBlock>
+        <Rectangle 
+            RadiusX="5.5" 
+            RadiusY="5.5"
+            Margin="340,378,0,0" 
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left"
+            Width="11"
+            Height="544"
+            Fill="#575757"
+            />
+        <Rectangle 
+            RadiusX="5.5" 
+            RadiusY="5.5" 
+            Margin="960,0,0,-485"
+            VerticalAlignment="Bottom"
+            HorizontalAlignment="Left"
+            Width="11"
+            Height="1250"
+            Fill="#575757" 
+            RenderTransformOrigin="0.5,0.5">
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <Rectangle
+            RadiusX="27"
+            RadiusY="27" 
+            Margin="1900,283,0,0" 
+            Fill="#D9D9D9"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="51" 
+            Height="578" />
+        <Rectangle 
+            RadiusX="27"
+            RadiusY="27" 
+            Margin="1900,476,0,0"
+            Fill="#26C770"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="51"
+            Height="385" />
+        <Rectangle
+            RadiusX="8"
+            RadiusY="8" 
+            Margin="1087,0,0,-250"
+            Fill="#3F3E3E"
+            VerticalAlignment="Bottom"
+            HorizontalAlignment="Left"
+            Width="12" 
+            Height="598"
+            RenderTransformOrigin="0.5,0.5" >
+            <Rectangle.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="-90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Rectangle.RenderTransform>
+        </Rectangle>
+        <TextBlock
+            Text="80%"
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="1905,889,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="2.09"
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="425,942,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="3" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="300,765,0,0" 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="2"
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="300,853,0,0"
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="5"
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="300,589,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock 
+            Text="4" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="300,677,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="6" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="300,490,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="3.09" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="590,942,0,0" 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock 
+            Text="4.09" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="765,942,0,0" 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock 
+            Text="5.09" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="945,942,0,0"
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left" />
+        <TextBlock 
+            Text="6.09" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="1115,942,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock 
+            Text="7.09" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="1285,942,0,0" 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" />
+        <TextBlock
+            Text="8.09" 
+            FontSize="30"
+            Foreground="#FFFFFF"
+            Margin="1455,942,0,0" 
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left" />
+        <Rectangle
+            RadiusX="8"
+            RadiusY="8" 
+            Margin="400,502,0,0"
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left"
+            Width="103"
+            Height="420">
+            <Rectangle.Fill>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="#7F22AB" Offset="0" />
+                <GradientStop Color="#6D6770" Offset="1" />
+            </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle 
+            RadiusX="8" 
+            RadiusY="8"
+            Margin="565,678,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="103" 
+            Height="244">
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#7F22AB" Offset="0" />
+                    <GradientStop Color="#6D6770" Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle 
+            RadiusX="8"
+            RadiusY="8" 
+            Margin="745,539,0,0" 
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="103"
+            Height="383">
+            <Rectangle.Fill>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                <GradientStop Color="#7F22AB" Offset="0" />
+                <GradientStop Color="#6D6770" Offset="1" />
+            </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle
+            RadiusX="8"
+            RadiusY="8" 
+            Margin="920,621,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left"
+            Width="103"
+            Height="301">
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#7F22AB" Offset="0" />
+                    <GradientStop Color="#6D6770" Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle 
+            RadiusX="8"
+            RadiusY="8" 
+            Margin="1090,872,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" 
+            Width="103" 
+            Height="50">
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#7F22AB" Offset="0" />
+                    <GradientStop Color="#6D6770" Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle
+            RadiusX="8"
+            RadiusY="8"
+            Margin="1260,758,0,0"
+            VerticalAlignment="Top" 
+            HorizontalAlignment="Left"
+            Width="103" 
+            Height="164">
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#7F22AB" Offset="0" />
+                    <GradientStop Color="#6D6770" Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
+        <Rectangle 
+            RadiusX="8" 
+            RadiusY="8"
+            Margin="1430,758,0,0"
+            VerticalAlignment="Top"
+            HorizontalAlignment="Left" 
+            Width="103" 
+            Height="164">
+            <Rectangle.Fill>
+                <LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
+                    <GradientStop Color="#7F22AB" Offset="0" />
+                    <GradientStop Color="#6D6770" Offset="1" />
+                </LinearGradientBrush>
+            </Rectangle.Fill>
+        </Rectangle>
     </Grid>
 </Page>
